Changed the way we inject the postprocessing script into the plex container.  Now we use the plexpost container startup script to copy the script (and set permissions properly) into the shared postdata volume. Thus the only changes we have to make to the standard plex configuration is the addition of the postdata volume and setting the post processing script settting to the correct location.
Also simplified the queue management process by eliminating the perl
postprocessing script and replacing it with a much simpler bash process.

--- a/src/docker-compose-sample.yml
+++ b/src/docker-compose-sample.yml
@@ -29,8 +29,7 @@ services:
       - /media/home-video:/data/home-video
       - /media/music:/data/music
       - /media/pictures:/data/pictures
-      - queue:/queue
-      - ./plexpost/src/plexpost:/usr/local/bin/plexpost:ro
+      - postdata:/postdata
     tty: true
     stdin_open: true
     network_mode: "bridge"
@@ -57,10 +56,10 @@ services:
     volumes:
       - /media/tv:/media/tv
       - /media/movies:/media/movies
-      - queue:/queue
+      - postdata:/postdata
     tty: true
     stdin_open: true
-    network_mode: "bridge"
+    network_mode: "none"
 
 volumes:
-  queue:
+  postdata:
