Update docker image to include ca-certificates required for slack based alerting

--- a/docker-compose-sample.yml
+++ b/docker-compose-sample.yml
@@ -53,6 +53,7 @@ services:
       - MAILDOMAIN=server.mydomain.com
       - MAILHUB=server.mydomain.com
       - MAILFROM=plexpost@server.mydomain.com
+      - SLACK_HOOK=https://hooks.slack.com/services/XXXXXXXX/YYYYYYYYY/aaaaaaaaaaaaaaaaaaa
     volumes:
       - ./data/tv:/media/tv
       - ./data/movies:/media/movies
