--- a/docker-compose-sample.yml
+++ b/docker-compose-sample.yml
@@ -38,7 +38,10 @@ services:
     image: mbrown/plexpost:latest
     hostname: plexpost
     restart: unless-stopped
+    ports:
+      - 80:8080/tcp
     environment:
+      - MANAGER_PORT=8080
       - TZ=America/New_York
       - COMSKIP_USER=plex
       - COMSKIP_GROUP=plex
