--- a/Dockerfile.plexpost
+++ b/Dockerfile.plexpost
@@ -1,17 +1,18 @@
 FROM ubuntu:latest
+ENV DEBIAN_FRONTEND="noninteractive"
 
-RUN ( . /etc/lsb-release; export DEBIAN_FRONTEND=noninteractive ; \
+RUN ( . /etc/lsb-release; \
     echo "Updating Base Ubuntu Image"; \
     sed -ie "s'http://archive.ubuntu.com'http://us.archive.ubuntu.com'" /etc/apt/sources.list; \
     apt-get -qq update && apt-get -qq -y --no-install-recommends install apt-utils && apt-get -qq -y dist-upgrade; \
     apt-get -qq -y clean ; \
     )
-RUN ( . /etc/lsb-release; export DEBIAN_FRONTEND=noninteractive ; \
+RUN ( . /etc/lsb-release; \
     echo "Installing prerequisites"; \
     apt-get -qq -y --no-install-recommends install ffmpeg libargtable2-0 jq ssmtp curl ca-certificates tzdata; \
     apt-get -qq -y clean ; \
     )
-RUN ( . /etc/lsb-release; export DEBIAN_FRONTEND=noninteractive ; \
+RUN ( . /etc/lsb-release; \
     echo "deb http://ppa.launchpad.net/stebbins/handbrake-releases/ubuntu ${DISTRIB_CODENAME} main" > /etc/apt/sources.list.d/handbrake.list; \
     echo "deb-src http://ppa.launchpad.net/stebbins/handbrake-releases/ubuntu ${DISTRIB_CODENAME} main" >> /etc/apt/sources.list.d/handbrake.list; \
     curl -s "http://keyserver.ubuntu.com:11371/pks/lookup?op=get&search=0x8771ADB0816950D8" | apt-key add -; \
@@ -19,8 +20,6 @@ RUN ( . /etc/lsb-release; export DEBIAN_FRONTEND=noninteractive ; \
     apt-get -qq update && apt-get -qq -y --no-install-recommends --allow-unauthenticated install handbrake-cli; \
     apt-get -qq -y clean ; \
     )
-
-ADD ./workdir /
 
 VOLUME /postdata
 
@@ -63,3 +62,10 @@ ENV TZ=America/New_York \
 
 ENTRYPOINT ["/init"]
 CMD []
+
+ARG WRKDIR
+ARG SRCDIR
+
+COPY ${WRKDIR} /
+COPY ${SRCDIR} /
+
