Complete rewrite of plexprocess moved transcode function into separate script plexprocess-transcode created env variable "TRANSCODER" to allow users to point to a custom transcode script
Fixed queueman to clean up the .mkv-orig files (old one cleaned up
.mkv-ts which is no longer used)

Fixed a bunch of log viewing stuff in cgi manager

Fixed up permissions and made things more consistent throughout.

--- a/Dockerfile.plexpost
+++ b/Dockerfile.plexpost
@@ -37,6 +37,7 @@ VOLUME /postdata
 # MAILDOMAIN - sets the domain name for from address rewriting
 # MAILHUB - name/ip address of mail relay.  This must be a relay server; does not support auth.
 # MAILFROM - sets email address that emails from this process should use
+# TRANSCODER - sets the path to the transcoder script you want to use
 # SLACK_HOOK - sets SLACK channel webhook for notifications
 ENV TZ=America/New_York \
     MANAGER_PORT=8080 \
@@ -58,6 +59,7 @@ ENV TZ=America/New_York \
     MAILDOMAIN="" \
     MAILHUB="" \
     MAILFROM="" \
+    TRANSCODER="" \
     SLACK_HOOK=""
 
 ENTRYPOINT ["/init"]
