New version initial push.  Changes include: * process to allow for a configuration file to use wildcard matching on * show names to select a custom comskip.ini file to use for each show * with fallback options to a default file if there are no matches.

--- a/src/usr/local/etc/comskip.ini
+++ b/src/usr/local/etc/comskip.ini
@@ -42,7 +42,7 @@ volume_slip=40
 skip_b_frames=0				; Set to 1 to force Comskip to skip frames for higher processing speed.
 hardware_decode=0			; Set to 1 to enable hardware accelerated video decoding, only available in donator version
 max_repair_size=200			; Will repair maximum 200 missing MPEG frames in the timeline, set to 0 to disable repairing for players that don't use PTS. 
-disable_heuristics=4		bit pattern for disabling heuristics, adding 1 disables heristics 1, adding 2 disables heristics 2, adding 4 disables heristics 3, 255  disables all heuristics 
+disable_heuristics=4		; bit pattern for disabling heuristics, adding 1 disables heristics 1, adding 2 disables heristics 2, adding 4 disables heristics 3, 255  disables all heuristics 
 delete_logo_file=0			; set to 1 if you want comskip to tidy up after finishing
 output_framearray=0			; create a big excel file for detailed analysis, set to 0 to disable
 output_data=0				; create a dump of the user data channel, used for CC and XDS (such as V-Chip info). Can be use together with output_framearray to remote debug CC decoding
